<resources>
    <string name="app_name">Stay Safe! SOS</string>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_send_message1">Stay Safe!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main1">Update Contacts</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="police_station">police station</string>
    <string name="hospitals">Hospitals</string>
    <string name="fire_station">Fire station</string>
    <string name="stop_recording">Stop recording</string>
    <string name="alarm_choice">Alarm Choice:</string>
    <string name="fall_detection_n">Fall Detection\n</string>
    <string name="option_1">Option 1</string>
    <string name="option_1">Option 1</string>
    <string name="option_1">Option 1</string>
    <string name="option_1">Option 1</string>
    <string name="settings_n">Settings\n</string>
    <string name="fall_detection">fall detection</string>
    <string name="settings">settings</string>
    <string name="join_the_points_to_cancel">Join the points to cancel!!</string>
    <string name="sos_can_be_cancelled_by_joining_the_three_dots_in_any_pattern">SOS can be cancelled by joining the three dots in any pattern .</string>
    <string name="todo">TODO</string>
    <string name="the_only_mistake_you_can_make_is_not_asking_for_help">The only mistake you can make is not asking for HELP...</string>
    <string name="fole">TODO</string>
    <string name="todo">TODO</string>
    <string name="the_only_mistake_you_can_make_is_not_asking_for_help">The only mistake you can make is not asking for HELP...</string>
    <string name="sos_button">SOS Button</string>
    <string name="draw_pattern_to_cancel">Draw pattern to cancel</string>
    <string name="stop_recording">Stop recording</string>
    <string name="stop_recordings">Stop Recording</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="google_maps_key">maps</string>
</resources>
