<FrameLayout xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.pulkit.sos.MapsActivity"
        tools:layout="@layout/activity_maps" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/police"
            android:textAlignment="center"
            android:text="@string/police_station"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHospital"
            android:textAlignment="center"
            android:text="@string/hospitals"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/firestation"
            android:textAlignment="center"
            android:text="@string/fire_station"/>
    </LinearLayout>
</FrameLayout>
