<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_screen4">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_the_points_to_cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="371dp"
            android:layout_height="484dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1.80"
            android:contentDescription="@string/todo"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/nav2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/sos_can_be_cancelled_by_joining_the_three_dots_in_any_pattern"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"

            />

    </LinearLayout>
</RelativeLayout>