<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_send_message1"
    android:layout_width="match_parent"
    android:background="@drawable/help_image"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.emeregency.SendMessage1"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_send_message1">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:id="@+id/sos_button"
        android:src="@drawable/sosbtn"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_marginTop="15dp"
        android:onClick="sendMessage"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_button"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/pattern"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/draw_pattern_to_cancel"
            android:visibility="invisible"
            android:onClick="drawPattern"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:id="@+id/audio_stop_button"
            android:text="@string/stop_recording"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/stop_recording"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:onClick="stopRecording"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:id="@+id/stop_recording_text"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stop_recordings"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/timer"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <!--- <ImageButton
        android:layout_width="60dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:id="@+id/temp_button"
        android:background="@null"
        android:src="@drawable/showmap"

        android:onClick="showMap"/> -->



</LinearLayout>
